--- a/order-service/package.json
+++ b/order-service/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "express": "^4.21.1",
-    "fs-extra": "^11.2.0"
+    "fs-extra": "^11.2.0",
+    "redis": "^4.7.0"
   }
 }
